--- a/side_bar.html
+++ b/side_bar.html
@@ -12,10 +12,10 @@
         <div class="8u">
             <h4>General Meeting</h4>
             <p>
-                Join us for the second general meeting of the quarter Wednesday February 14th. 
+                February 14th, 7PM 
             </p>
             <p>
-                We will be going over information about how to get involved in this year's culture show, whether it be through dancing or   volunteering within various committees! 
+               Center for Identity + Inclusion
             </p>
             <p> 
                 <a href="https://www.facebook.com/events/177820689658516/">Join the event!</a>
@@ -46,6 +46,17 @@
                 <li>Bachata: 2:00-3:00 p.m.</li>
                 <li>Salsa: 3:00-4:00 p.m.</li>
             </ul>
+        </div>
+    </div>
+    <div class="row 50%">
+        <div class="4u">
+            <a href="http://www.olasuchicago.org/img/show/flyer.png" class="image fit"><img src="http://www.olasuchicago.org/img/show/flyer.png" alt="Marketing" /></a>
+        </div>
+        <div class="8u">
+            <h4>Experiencia e Identidad</h4>
+            <p>
+                This year, OLAS's annual art fair theme is Latinx identity. The theme aims to recognize and celebrate the cohesiveness and power that come from shared experiences and unity in diversity, both in Latin America and abroad. The fair will take place at the end of this Week! See you there!
+            </p>    
         </div>
     </div>
     <div class="row 50%">
