--- a/events/index.html
+++ b/events/index.html
@@ -131,7 +131,7 @@
                                 <article class="12u(mobile) special">
                                     <a href="http://www.olasuchicago.org/img/sidebar/pic06.jpg" class="image fit"><img src="http://www.olasuchicago.org/img/sidebar/pic06.jpg" alt="PremiosOlas" /></a>
                                     <header>
-                                        <h3><a href="../cultural_show/index.html#practices">Premios OLAS Practices</a></h3>
+                                        <h3 class="event_title"><a href="../cultural_show/index.html#practices">Premios OLAS Practices</a></h3>
                                     </header>
                                     <p class="indent">
                                             Remenber to show up to practices, attendance is mandatory! Email your choreographer if you can't make it! Schedule is as follows:
@@ -158,7 +158,7 @@
                                 <article class="12u(mobile) special">
                                     <a href="http://www.olasuchicago.org/img/show/flyer.png" class="image fit"><img src="http://www.olasuchicago.org/img/show/flyer.png" alt="Marketing" /></a>
                                     <header>
-                                        <h3><a href="../cultural_show/index.html#committees">Marketing Committee</a></h3>
+                                        <h3 class="event_title"><a href="../cultural_show/index.html#committees">Marketing Committee</a></h3>
                                     </header>
                                     <div class="main_events">
                                         <p class="indent">
